Add hub deployments v1
